--- a/a1/a1.md
+++ b/a1/a1.md
@@ -91,6 +91,12 @@ varying number of training examples.
 
 ### 2.1
 
+### 2.1.1
+
+### 2.1.2
+
+### 2.1.3
+
 ### 2.2
 
 ### 2.3
@@ -99,51 +105,45 @@ varying number of training examples.
 
 ## Question 3 - Coding Questions
 
-### 3.1 Regularization and Cross-Validation
+### 3.1
 
 #### 3.1.1
-
-```julia
-include("misc.jl")
-
-function rbf(X1, X2)
-	sigma = 1
-  return exp.(-distancesSquared(X1,X2)/(2*sigma^2))
-end
-
-function leastSquaresRBFL2(X,y)
-  l = 1
-
-	# Add bias column and rbf
-	n = size(X,1)
-	Z = [ones(n,1) X rbf(X, X)]
-	display(size(Z))
-
-	# Find regression weights minimizing squared error with regularization
-	w = (Z'*Z + eye(size(Z,2))*l)\(Z'*y)
-
-	# Make linear prediction function
-	predict(Xtilde) = [ones(size(Xtilde,1),1) Xtilde rbf(Xtilde, X)]*w
-
-	# Return model
-	return LinearModel(predict,w)
-end
-```
 
 ![](./3.1.1.png)\
 
 
+
 #### 3.1.2
 
-RBF is non-parametric so the model has $O(n)$ values. Under a linear basis the
-model has $O(d)$ values.
-
-TODO
-
 #### 3.1.3
 
-TODO
+![](./3.1.2.png)\
 
-#### 3.1.3
+
+
+#### 3.1.4
+
+If the period of the oscillations isn't constant, we can transform the data
+before hand and put it on a non-linear scale before making using the Gaussian
+RBF. That way the RBF sees a constant period, but our data isn't.
+
+If we haven't evenly sampled the training data, but we know the distribution we
+can weigh the examples to counterbalance our uneven sampling. This would be
+fairly simple to implement by adding a weight to the distance calculated for
+each RBF point.
+
+
+### 3.2
+
+
+```
+trainError = 0.004
+validError = 0.026
+```
+
+![](./3.2.png)\
+
+
+### 3.3
 
 TODO
