--- a/a1/a1.md
+++ b/a1/a1.md
@@ -39,7 +39,7 @@ amount of data can cause overfitting on the training error (lowering it) and
 making the approximation error much larger.
 
 
-### 6. What is wrong with with using 1 n Pn i=1(ˆyi == ˜yi) as the validation error of a regression model?
+### 6. What is wrong with with using ... as the validation error of a regression model?
 
 In regression it's very unlikely that the two numbers will be an exact match and
 thus the validation error will be always very close to 0 and thus useless for
@@ -68,7 +68,7 @@ and approximations are the best we can do.
 Increasing the condition number of X means the problem is less stable and will
 have a higher approximation error.
 
-### 11. For supervised training of a linear model w T x i with yi ∈ {−1, +1}, why do we use the logistic loss intead of the squared error?
+### 11. For supervised training of a linear model ..., why do we use the logistic loss intead of the squared error?
 
 ### 12. What is the key difference between “one vs. all” logistic regression and training using the softmax loss?
 
@@ -91,13 +91,121 @@ varying number of training examples.
 
 ### 2.1
 
-### 2.1.1
+#### 2.1.1
 
-### 2.1.2
+$$f(w) = \frac{1}{2}(w-u)^T \Sigma (w-u)$$
 
-### 2.1.3
+$$\Sigma = G^TG$$
+
+$$f(w) = \frac12(G(w-u))^2$$
+
+$$f'(w) = G(w-u)G$$
+
+$$0 = G(w-u)G$$
+
+$$GwG = GuG$$
+
+$$w = u$$
+
+#### 2.1.2
+
+$$f'(w) = \frac{||Xw-y||}{\sigma ^2} \frac{Xw-y}{||Xw-y||} + \lambda ||w||\frac{w}{||w||}$$
+
+$$f'(w) = \frac{Xw-y}{\sigma ^2} + \lambda w$$
+
+$$f'(w) = (\frac{X}{\sigma ^2}-\lambda I)w - \frac{y}{\sigma ^2}$$
+
+$$0 = (\frac{X}{\sigma ^2}-\lambda I)w - \frac{y}{\sigma ^2}$$
+
+$$w = (\frac{X}{\sigma ^2}-\lambda I)^{-1} \frac{y}{\sigma ^2}$$
+
+#### 2.1.3
+
+$$f'(w) = \sum_{i=1}^n v_i(w^Tx^i-y^i)x^i + \Lambda w - \Lambda u$$
+
+$$f'(w) = w^T\sum_{i=1}^n v_i{x^i}^2-\sum_{i=1}^n v_iy^ix^i + \Lambda w - \Lambda u$$
+$$f'(w) = (\sum_{i=1}^n v_i{x^i}^2 + \Lambda)w -\sum_{i=1}^n v_iy^ix^i  - \Lambda u = 0$$
+$$w = (\sum_{i=1}^n v_i{x^i}^2 + \Lambda)^-1(\sum_{i=1}^n v_iy^ix^i  + \Lambda u)$$
 
 ### 2.2
+
+#### 2.2.1
+
+$$||w||_\infty \leq ||w||_2$$
+
+$$max_i w_i \leq \sqrt{w_0^2 + w_1^2 + \ldots}$$
+
+$$\sqrt{(max_i w_i)^2} \leq \sqrt{w_0^2 + w_1^2 + \ldots}$$
+$$(max_i w_i)^2 \leq w_0^2 + w_1^2 + \ldots$$
+
+Since the max element of $w$ is included in both sides and all the
+squared terms are positive, the right side must be greater or equal to the left
+hand side.
+
+$$||w||_2 \leq ||w||_1$$
+
+$$\sqrt{w_0^2 + w_1^2 + \ldots} \leq |w_0| + |w_1| + \ldots$$
+
+$$w_0^2 + w_1^2 + \ldots \leq (|w_0| + |w_1| + \ldots)^2$$
+
+$$w_0^2 + w_1^2 + \ldots \leq w_0^2 + 2|w_0||w_1| + w_1^2 + \ldots$$
+
+Thus, both sides contain the $w_i^2$ elements and thus the right side must be
+greater or equal due to the $2|w_i||w_j|$ elements which are all positive.
+
+#### 2.2.2
+
+$$||w||_1 \leq \sqrt{d}||w||_2$$
+
+$$|w_0| + |w_1| + \ldots \leq \sqrt{d}\sqrt{w_0^2 + w_1^2 + \ldots}$$
+$$(|w_0| + |w_1| + \ldots)^2 \leq d(w_0^2 + w_1^2 + \ldots)$$
+
+$$w_0^2 + 2|w_0||w_1| + w_1^2 + \ldots \leq d(w_0^2 + w_1^2 + \ldots)$$
+
+$$2|w_0||w_1| + \ldots \leq (d-1)(w_0^2 + w_1^2 + \ldots)$$
+
+We see on the left side there are $\frac{d(d-1)}{2}$ terms.
+
+$$2|w_0||w_1| + \ldots \leq (d-1)(w_0^2 + w_1^2 + \ldots)$$
+
+We can complete the square, since there are $d-1$ occurences of each
+variable on the left hand side and $d-1$ squared terms of it on the right.
+$$0 \leq \sum_{i=1}^d \sum_{j=i+1}^d (w_i - w_j)^2 $$
+
+Since all the terms on the right are squared, they must be positive and the
+inequality holds.
+
+
+$$\sqrt{d} ||w||_2 \leq d ||w||_\infty$$
+
+$$d ||w||_2^2 \leq d^2 ||w||_\infty$$
+$$||w||_2^2 \leq d ||w||_\infty^2$$
+
+$$w_1 + w_2 + \ldots \leq d \max_i w_i^2$$
+
+Every $w_i^2 \leq \max_i w_i^2$, thus, this inequality holds.
+
+
+#### 2.2.3
+
+$$\frac{1}{2}((w_1+u_1)^2 + (w_2+u_2)^2 + \ldots) \leq ||w||^2+||u||^2$$
+$$w_1^2+2w_1u_1 +u_1^2 + w_2^2+2w_2u_2 + u_2^2 + \ldots \leq 2(||w||^2+||u||^2)$$
+
+The squared terms on the left equal ($||w||^2+||u||^2$).
+
+$$2w_1u_1 + 2w_2u_2 + \ldots \leq ||w||^2+||u||^2$$
+
+$$2w_1u_1 + 2w_2u_2 + \ldots \leq w_1^2 + u_1^2 + w_2^2 + u_2^2 + \ldots$$
+
+$$0 \leq (w_1^2 - 2w_1u_1 + u_1^2) + (w_2^2 - 2w_2u_2 + u_2^2) + \ldots$$
+
+Completing the square gets us
+
+$$0 \leq (w_1 - u_1)^2 + (w_2 - u_2)^2 + \ldots$$
+
+Since all the terms on the right hand side are squared they must be positive and
+thus $\geq 0$. Thus, the inequality holds.
+
 
 ### 2.3
 
@@ -117,7 +225,7 @@ varying number of training examples.
 
 #### 3.1.3
 
-![](./3.1.2.png)\
+![](./3.1.3.png)\
 
 
 
