--- a/a1/a1.md
+++ b/a1/a1.md
@@ -209,7 +209,76 @@ thus $\geq 0$. Thus, the inequality holds.
 
 ### 2.3
 
+#### 2.3.1
+
+Laplace distribution
+$$f(x|\mu, b) = \frac{1}{2b} \exp(-\frac{|x-\mu|}{b})$$
+
+Gaussian distribution
+$$f(x|\mu, \sigma) = \frac{1}{\sqrt{w\pi\sigma}}
+\exp(-\frac{-\frac{(x-\mu)^2}{2\sigma^2}}{b})$$
+
+$$f(x) = -\sum_{i=1}^n \log(p(y^i|x^i,w))
+ - \sum_{j=1}^n \log(p(w^j))$$
+
+$$f(x) = -\sum_{i=1}^n (\log(\frac{1}{\sqrt{2\pi \sigma _i^2}})
+ - \frac{(w^Tx^i-y^i)^2}{2\sigma_i^2})
+ - \sum_{j=1}^n (\log(\frac{\lambda}{2}) - \lambda|w_j|)$$
+
+We can then discard any constants.
+
+$$f(x) = -\sum_{i=1}^n (\log(\frac{1}{\sqrt{2\pi \sigma _i^2}})
+ - \frac{(w^Tx^i-y^i)^2}{2\sigma_i^2})
+ + \sum_{j=1}^n  \lambda|w_j|)$$
+
+#### 2.3.2
+
+$$f(x) = -\sum_{i=1}^n \log(p(y^i|x^i,w))
+ - \sum_{j=1}^n \log(p(w^j))$$
+
+
+$$f(x) = -\sum_{i=1}^n
+\log(
+\frac{1}{\sqrt{\nu}\Beta(\frac12, \frac{\nu}2)}
+(1+\frac{(w^Tx^i-y^i)^2}{\nu})^{-\frac{\nu+1}2}
+)
+ + \sum_{j=1}^n \frac{\lambda(w_j-u_j)^2}{2}$$
+
+$$f(x) = -\sum_{i=1}^n
+-\frac{\nu+1}2
+\log(
+1+\frac{(w^Tx^i-y^i)^2}{\nu})
+)
+ + \sum_{j=1}^n \frac{\lambda(w_j-u_j)^2}{2}$$
+
+#### 2.3.3
+
+$$f(x) = -\sum_{i=1}^n \log(p(y^i|x^i,w))
+ - \sum_{j=1}^n \log(p(w^j))$$
+
+$$f(x) = -\sum_{i=1}^n
+\log(
+\exp(v^iw^Tx^i)\exp(-y^i\exp(w^Tx^i))
+)
++ \sum_{j=1}^n \frac{\lambda_j w_j^2}{2}$$
+
+$$f(x) = -\sum_{i=1}^n  (
+v^iw^Tx^i - y^i\exp(w^Tx^i)
+)
++ \sum_{j=1}^n \frac{\lambda_j w_j^2}{2}$$
+
 ### 2.4
+
+#### 2.4.1
+
+$$f(w) = w^Tu+u^TAw + \frac12 w^Tw + w^TAw$$
+
+$$\nabla f(w) = u+u^TA + w + (A + A^T)w$$
+$$\nabla^2 f(w) = I + A + A^T$$
+
+#### 2.4.2
+
+#### 2.4.3
 
 ## Question 3 - Coding Questions
 
