--- a/a1/a1.md
+++ b/a1/a1.md
@@ -278,11 +278,17 @@ $$\nabla^2 f(w) = I + A + A^T$$
 
 #### 2.4.2
 
+TODO
+
 #### 2.4.3
+
+TODO
 
 ## Question 3 - Coding Questions
 
 ### 3.1
+
+TODO code
 
 #### 3.1.1
 
