--- a/a1/a1.md
+++ b/a1/a1.md
@@ -329,4 +329,113 @@ validError = 0.026
 
 ### 3.3
 
-TODO
+#### 3.3.1
+
+
+leastAbsolutes.jl
+```julia
+using MathProgBase, GLPKMathProgInterface
+
+include("misc.jl")
+
+function leastAbsolutes(X, y)
+  (n, d) = size(X)
+  X = [ones(n, 1) X]
+  d += 1
+  y = y[:,1]
+  c = [ones(n); zeros(d)]
+  A = [eye(n) -X; eye(n) X]
+  b = [-y; y]
+
+  display(size(y))
+  display(size(c))
+  display(size(A))
+  display(size(b))
+
+  l = [zeros(n); ones(d) * -Inf]
+
+  sol = linprog(c, A, '>', b, l, Inf, GLPKSolverLP())
+  w = sol.sol[n+1:n+d]
+  if sol.status == :Optimal
+      println("Optimal objective value is $(sol.objval)")
+      println("Optimal solution vector is: $(w)")
+  else
+      println("Error: solution status $(sol.status)")
+  end
+  predict(Xtilde) = [ones(size(Xtilde,1),1) Xtilde]*w
+
+  # Return model
+  return LinearModel(predict, w)
+end
+```
+
+![](./3.3.1.png)\
+
+
+
+#### 3.3.2
+
+Expanding the L-infinity norm gets an objective function of:
+
+$$\min{w} \sum_{i=1}^n \max_j\{|w_j x^i_j - y^i|\}$$
+
+We can replace the max with $d$ constraints and a dummy variable that must be
+larger than all the possible values of $w_j x^i_j-y^i$.
+
+$$\min{w, r} \sum_{i=1}^n r_i, r_i \geq |w_j x^i_j -y^i| \forall i, j$$
+$$\min{w, r} \sum_{i=1}^n r_i,
+r_i \geq w_j x^i_j -y^i,
+r_i \geq y^i - w_j x^i_j
+\forall i, j$$
+
+#### 3.3.3
+
+leastMax.jl
+```julia
+using MathProgBase, GLPKMathProgInterface
+
+include("misc.jl")
+
+function leastMax(X, y)
+  (n, d) = size(X)
+  X = [ones(n, 1) X]
+  d += 1
+  y = y[:,1]
+  c = [ones(n); zeros(d)]
+  A = zeros(0, d + n)
+  b = Float64[]
+
+  for j = 1:d
+    colj = zeros(d, d)
+    colj[j,j] = 1
+    A = [A; eye(n) X*colj; eye(n) -X*colj]
+    b = [b; -y; y]
+  end
+
+  display(size(y))
+  display(size(c))
+  display(size(A))
+  display(size(b))
+
+  l = [zeros(n); ones(d) * -Inf]
+
+  sol = linprog(c, A, '>', b, l, Inf, GLPKSolverLP())
+  w = sol.sol[n+1:n+d]
+  if sol.status == :Optimal
+      println("Optimal objective value is $(sol.objval)")
+      println("Optimal solution vector is: $(w)")
+  else
+      println("Error: solution status $(sol.status)")
+  end
+  predict(Xtilde) = [ones(size(Xtilde,1),1) Xtilde]*w
+
+  # Return model
+  return LinearModel(predict, w)
+end
+```
+
+![](./3.3.3.png)\
+
+
+
+
