--- a/a1/a1.md
+++ b/a1/a1.md
@@ -68,11 +68,23 @@ and approximations are the best we can do.
 Increasing the condition number of X means the problem is less stable and will
 have a higher approximation error.
 
-### 11. For supervised training of a linear model ..., why do we use the logistic loss intead of the squared error?
+### 11. For supervised training of a linear model ..., why do we use the logistic loss instead of the squared error?
+
+Squared error is more susceptible to outliers than logistic loss causing slower
+convergence rates than logistic loss for classification purposes.
+
 
 ### 12. What is the key difference between “one vs. all” logistic regression and training using the softmax loss?
 
+Softmax loss allows for normalization of $w$ across all labels which prevents
+issues with one vs. all where sometimes certain classes will never be predicted.
+
 ### 13. Give a supervised learning scenario where you would use the Laplace likelihood and a scenario where you would use a Laplace prior.
+
+Laplace likelihood is useful when there are a large amount of outliers since
+it's closer to absolute error than something like gaussian which is equivalent
+to least squares. Laplace prior is useful when you need more sparsity in the
+weights than you can get through gaussian priors.
 
 ### 14. What do we use the backpropagation algorithm for?
 
@@ -80,12 +92,18 @@ Updating weights in a neural network.
 
 ### 15. What are the two key properties of a problem that let us use dynamic programming?
 
+The problem can be formulated as a recursive combination of "sub-problems" and that there
+is a limited overlapping set of sub-problems.
+
 ### 16. Consider a deep neural network with 1 million hidden units. Explain whether this is a parametric or a non-parametric model.
 
 This is a parametric model since the amount of memory it uses is constant with a
 varying number of training examples.
 
 ### 17. What are two reasons that convolutional neural networks overfit less than classic neural networks?
+
+The convolution is reused and thus must be more general and it uses fewer total
+weights and thus has a smaller chance of overfitting.
 
 ## Question 2 - Calculation Questions
 
